--- a/simple-db/package.json
+++ b/simple-db/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/repl.ts",
-    "test": "ts-node src/index.ts"
+    "test": "ts-node src/index.ts",
+    "start": "ts-node src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "node-sql-parser": "^4.18.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^20.0.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
